--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 url: "https://coluccigiovanni.com
 
 # Google tracking id
-google-tracking-id: "UA-XXXXXXXX-X"
+google-tracking-id: "G-W2211M8ENL"
 
 #############
 # HTML Head #
