Update project name and site URL in README and configuration

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 
 # NB! Set your site's url, otherwise nothing will work
-url: "https://coluccigiovanni16.github.io/GCPersonalBlog/"
+url: "https://coluccigiovanni16.github.io/GCStoryLine/"
 
 # Google tracking id
 google-tracking-id: "G-W2211M8ENL"
