Update header quote in configuration

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ background-img: "intro-bg.jpg"
 # Dynamic Text on the Header #
 ##############################
 
-quote: "Where’s your will to be weird?"
+quote: "Myname is Gioavanni, YouKnow?"
 me-img: "/img/jetpacktocat.png"
 
 # To use github profile pic uncomment the following line and replace 'user_name'
